# Complete_Python

./: .gitignore  README.md
01_Introduction/: 0.0_Foundational _Programming_Concepts.md  01_Introduction.md  02_Installation_& _Setup Guide.md  03_Difference_between_High&Low_Level.md  04_Internal_working_of_python.md  05_memory_management.md  byte.py  hello_world.py  internal.py
02_Type_System/: 01_identifiers_And_Reserved_Words.md  01_variables.ipynb  02_DataTypes.md  03_StringsDatatype.md  03_strings.ipynb  04_Manuplation_of_strings.md  07_Operators.md  MCQ.md  README.md
03_Flow_Control/: 01_Control_Flow.md  README.md
04_Data_Structures/: Types_ of_Copy.md
04_Data_Structures/01_Lists/: list.ipynb
04_Data_Structures/04_Dictionary/: Dictionary.ipynb  capitals.py
04_Data_Structures_or_Collections/: Data_StructuresOrCollections.md  Types_ of_Copy.md
04_Data_Structures_or_Collections/01_Lists/: list.ipynb
04_Data_Structures_or_Collections/03_Sets/: sets.ipynb
05_Functions/Functional _programming/: HigherOrder_Functions.md  (+6 more)
07_Error_Handling/: Exception_handling.ipynb  README.md
09_Projects/: README.md  Trivia_Game.py
10_File_Handling/: File_handling.ipynb  example.txt  example2.txt
13_Python_DataBase_Connectivity/: Python_DataBase_Connectivity.md  Python_Database_Connection.ipynb  Python_Database_installation.md
16_Socket Programing/: Readme.md
18.FastAPI/: 01.Basics.md  02.Project_Setup.md  frontend.py  main.py  pyproject.toml
18.FastAPI/app/: app.py  db.py  images.py  schemas.py  users.py
Interview questions in Python/: python_programs.ipynb
(+47 files in other folders)
